--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -1,1 +1,5 @@
-{% include custom/footer.html %}
+<footer role="contentinfo">
+  <p>Copyright © {{site.time | date: "%Y"}} - {{site.author}} -
+    <span class="credit">Publié grâce à
+    <a href="http://octopress.org">Octopress</a></span></p>
+</footer>
