--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,15 +1,46 @@
-{% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}
-{% include head.html %}
-<body {% if page.body_id %} id="{{ page.body_id }}" {% endif %} {% if page.sidebar == false %} class="no-sidebar" {% endif %} {% if page.sidebar == 'collapse' or site.sidebar == 'collapse' %} class="collapse-sidebar sidebar-footer" {% endif %}>
-  <header role="banner">{% include header.html %}</header>
-  <nav role="navigation">{% include navigation.html %}</nav>
-  <div id="main">
-    <div id="content">
-      {{ content | expand_urls: root_url }}
+{% capture root_url %}{{site.root | strip_slash}}{% endcapture %}
+{% capture description %}{{page.description}}{% endcapture %}
+{% capture canonical %}
+  {{site.url}}{{page.url | remove:'index.html' | strip_slash}}
+{% endcapture %}
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="utf-8">
+    <title>{% if page.title %}{{page.title}} · {% endif %}{{site.title}}</title>
+    <meta name="author" content="{{site.author}}" />
+    <meta name="description" content="{{description | strip_html | condense_spaces | truncate:170}}" />
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="canonical" href="{{canonical}}" />
+    <link rel="icon" href="{{root_url}}/favicon.ico" />
+    <link rel="stylesheet" href="{{root_url}}/stylesheets/style.css" media="screen" />
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <link rel="alternate" href="{{site.subscribe_rss}}" title="{{site.title}}" type="application/atom+xml" />
+
+    {% include custom/head.html %}
+  </head>
+
+  <body>
+    {% include navbar.html %}
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9">
+          {{content | expand_urls: root_url}}
+        </div>
+
+        <aside class="sidebar col-sm-3">
+          {% include_array default_asides %}
+        </aside>
+      </div>
     </div>
-  </div>
-  <footer role="contentinfo">{% include footer.html %}</footer>
-  {% include after_footer.html %}
-  {% include foot.html %}
-</body>
+
+    <footer class="text-center">
+      {% include footer.html %}
+    </footer>
+    {% include after_footer.html %}
+  </body>
 </html>
