--- a/source/_includes/after_footer.html
+++ b/source/_includes/after_footer.html
@@ -2,3 +2,4 @@
 {% include google_plus_one.html %}
 {% include twitter_sharing.html %}
 {% include google_analytics.html %}
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
