--- a/source/_includes/after_footer.html
+++ b/source/_includes/after_footer.html
@@ -2,4 +2,5 @@
 {% include google_plus_one.html %}
 {% include twitter_sharing.html %}
 {% include google_analytics.html %}
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
